made changes to images array

--- a/views/images-index.handlebars
+++ b/views/images-index.handlebars
@@ -1,5 +1,5 @@
 <h1>NASA Images</h1>
 {{#each nasaImages}}
-<h2>{{this.name}}</h2>
-<small>{{this.location}}</small>
+<h2>{{this.date}}</h2>
+<small>{{this.name}}</small>
 {{/each}}
