--- a/views/images-index.handlebars
+++ b/views/images-index.handlebars
@@ -1,4 +1,4 @@
-<h1>NASA Images</h1>
+<h1>Astronomy Picture of The Day Archive</h1>
 {{#each images}}
 <h2>{{this.date}}</h2>
 <small>{{this.name}}</small>
