added route to single image

--- a/views/images-index.handlebars
+++ b/views/images-index.handlebars
@@ -1,5 +1,5 @@
 <h1>Astronomy Picture of The Day Archive</h1>
 {{#each images}}
-<h2>{{this.date}}</h2>
-<small>{{this.name}}</small>
+<p>{{this.date}}</p>
+<p> <a href="/images/{{this._id}}"></a>{{this.name}}</p>
 {{/each}}
